# agentic-genomics

./: .env.example  .gitignore  DISCLAIMER.md  LIMITATIONS.md  README.md  gwas_bridge.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
apps/: streamlit_demo.py
data/samples/: README.md  proband_demo.vcf
docs/: architecture.md  roadmap.md  why-agentic.md
docs/blog/: blog-agentic-genomics.md  blog-genomics-skills.md
docs/site/: README.md  index.html  llms.txt  robots.txt  sitemap.xml  styles.css
docs/site/assets/: Ankur_Sharma_Resume_2026.docx  resume.html
notebooks/: 01_variant_interpreter_demo.ipynb
src/agentic_genomics/: __init__.py
src/agentic_genomics/agents/variant_interpreter/: __init__.py  graph.py  nodes.py  state.py
src/agentic_genomics/agents/variant_interpreter/prompts/: __init__.py
src/agentic_genomics/agents/variant_interpreter/tools/: __init__.py  acmg.py  acmg_lite.py  hpo.py  myvariant.py  vcf_parser.py
src/agentic_genomics/cli/: __init__.py  main.py
src/agentic_genomics/core/: __init__.py  cache.py  llm.py  logging.py
tests/: test_acmg.py  test_cache.py  test_cli.py  test_critic.py  test_graph_integration.py  test_hpo.py  test_notebooks.py  test_vcf_parser.py
